# agentaudit

./: .agentaudit.yml  .gitignore  .skillcheck.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  agentaudit-blueprint.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  new_rule.md
.github/workflows/: ci.yml  release.yml
docs/: ci.md  rules.md  writing-rules.md
scripts/: make_fixtures.py
src/agentaudit/: __init__.py  cli.py  config.py  discovery.py  rule_engine.py  scanner.py
src/agentaudit/analyzers/: __init__.py  dangerous_commands.py  exfiltration.py  hidden_content.py  injection_patterns.py  llm_analyzer.py  mcp_permissions.py  obfuscation.py
src/agentaudit/parsers/: __init__.py  jsonyaml.py  markdown.py
src/agentaudit/reporters/: __init__.py  console.py  json_reporter.py  markdown_reporter.py  sarif.py
src/agentaudit/rules/: commands.yml  exfiltration.yml  hidden-content.yml  injection.yml  mcp.yml
src/skillcheck/: __init__.py  cli.py  config.py  discovery.py  models.py  rule_engine.py  scanner.py
src/skillcheck/analyzers/: __init__.py  dangerous_commands.py  exfiltration.py  hidden_content.py  injection_patterns.py  llm_analyzer.py  mcp_permissions.py  obfuscation.py
src/skillcheck/parsers/: __init__.py  jsonyaml.py  markdown.py
src/skillcheck/reporters/: __init__.py  console.py  json_reporter.py  markdown_reporter.py  sarif.py
src/skillcheck/rules/: commands.yml  exfiltration.yml  hidden-content.yml  injection.yml  mcp.yml
tests/: conftest.py  test_analyzers.py  test_cli.py  test_config.py  test_corpus.py  test_discovery.py  test_llm_analyzer.py  test_parsers.py  test_reporters.py  test_rule_engine.py
tests/fixtures/benign/code_examples/: SKILL.md  expected.json
tests/fixtures/benign/legit_mcp/: .mcp.json  expected.json
tests/fixtures/benign/normal_skill/: SKILL.md  expected.json
tests/fixtures/benign/security_docs/: README.md
tests/fixtures/malicious/base64_payload/: SKILL.md  expected.json
tests/fixtures/malicious/bidi_override/: .cursorrules  expected.json
(+22 files in other folders)
