[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentaudit-scanner"
version = "0.1.1"
description = "A read-only security scanner for AI agent skills, rule files, and MCP configurations. Detects prompt injections, hidden instructions, and dangerous permissions before your agent obeys them."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sudan Upadhaya", email = "sudanupadhaya@gmail.com" }]
keywords = [
    "security",
    "ai-agents",
    "prompt-injection",
    "mcp",
    "claude",
    "scanner",
    "llm-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = ["httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/sudan94/agentaudit"
Repository = "https://github.com/sudan94/agentaudit"
Issues = "https://github.com/sudan94/agentaudit/issues"
Changelog = "https://github.com/sudan94/agentaudit/blob/master/CHANGELOG.md"

[project.scripts]
agentaudit = "agentaudit.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentaudit = ["rules/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# B008: Typer requires typer.Option()/Argument() calls in parameter defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.coverage.run]
source = ["src/agentaudit"]
